--- a/analiza.Rmd
+++ b/analiza.Rmd
@@ -227,9 +227,28 @@ ggplot(clustered, aes(x = clustered$`Arrival Delay in Minutes`, y = clustered$`D
 
 
 ```
+```{r}
+df[,c("Departure", "Arrival")] = dat[, c("Departure Delay in Minutes", "Arrival Delay in Minutes")]
+set.seed(1)
+
+sample <- sample(c(TRUE, FALSE), nrow(df), replace=TRUE, prob=c(0.7,0.3))
+train  <- df[sample, ]
+test   <- df[!sample, ]
+
+model <- lm(Arrival ~ Departure, data = train)
+summary(model)
+```
+# It'S time to make some predictions
+```{r}
+predictions <- predict(model, newdata = test[,c("Departure")])
+
+#create scatterplot with fitted regression line
+ggplot(test, aes(x = Arrival, y = Departure)) +
+  geom_point() +
+  stat_smooth(method = "loess", se=TRUE)
+```
 
 ```{r}
-
 mean_of_snacks <- mean(clustered$`Food and drink`)
 mean_of_snacks
 mean_of_seat_comfort <- mean(clustered$`Seat comfort`)
